--- a/src/app/views/homepage/homepage.component.html
+++ b/src/app/views/homepage/homepage.component.html
@@ -1,2 +1,93 @@
-<p>homepage works!</p>
+<app-navbar></app-navbar>
+<section class="billboardlight" id="parallax">
+    <div class="welcome"> 
+      <h1 class="title">Find The House That Suits You !</h1>
+      <p>Want to find a home? we are ready to help you find one that suits your lifestyle and needs.</p>
+      <a routerLink="" class="getStarted">Get Started</a>
+    </div>
+  </section>
+
+
+  <section id="why-choose-us">
+    <h2 class="title2">Why Choose Us?</h2>
+    <div class="features">
+       <div class="feature">
+         <img src="assets/icons/loupe.png" alt="Feature 1 Icon">
+         <h3>Feature 1</h3>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+       </div>
+       <div class="feature">
+         <img src="assets/icons/building.png" alt="Feature 2 Icon">
+         <h3>Feature 2</h3>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+       </div>
+       <div class="feature">
+         <img src="assets/icons/deal.png" alt="Feature 3 Icon">
+         <h3>Feature 3</h3>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+       </div>
+    </div>
+   </section>
+   
+  
+  
+  
+  
+  <section id="new-deals">
+  <h1 class="title2">Properties</h1>
+  <a href=""> Explore All
+    <img src="assets/icons/arrow.png" alt="" width="40px">
+  </a>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/img6.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-bottom">
+            <button>buy</button>
+            <span>1,000,000$</span>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/img4.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a short card.</p>
+          </div>
+           <div class="card-bottom">
+            <button>buy</button>
+            <span>1,000,000$</span>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="assets/img1.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+          </div>
+          <div class="card-bottom">
+            <button>buy</button>
+            <span>1,000,000$</span>
+          </div>
+        </div>
+      </div>
+    
+    </div>
+  </section>
+   
+  
+
+
+
+
+
+
+
 <app-footer></app-footer>
