--- a/src/app/views/homepage/homepage.component.html
+++ b/src/app/views/homepage/homepage.component.html
@@ -1,2 +1,70 @@
-<p>homepage works!</p>
+<app-navbar></app-navbar>
+
+<div class="header">
+  <div class="header-content">
+    <nav class="navigation">
+      <p>Predict, Prevent, Live</p>
+    </nav>
+  </div>
+</div>
+
+<section class="billboardlight" id="parallax">
+  <div class="overlay"></div>
+  <div class="main-content">
+    <h1 class="font">Welcome to Microscan!</h1>
+    <h2>Harnessing Microbiom Data for Early Cancer Detection</h2>
+  </div>
+</section>
+
+<div class="features">
+  <div class="feature-item">
+    <img src="../../../assets/img/img1.jpg" alt="Laboratory upload">
+    <h3>Laboratory upload</h3>
+    <p>Easily upload microbiom analyses from your laboratory directly to our secure platform.</p>
+  </div>
+  <div class="feature-item">
+    <img src="../../../assets/img/img2.jpg" alt="Advanced AI Analysis">
+    <h3>Advanced AI Analysis</h3>
+    <p>Our state-of-the-art algorithm processes the microbiom data to predict cancer risks accurately and efficiently.</p>
+  </div>
+  <div class="feature-item">
+    <img src="../../../assets/img/img4.jpg" alt="Doctor's Dashboard">
+    <h3>Doctor's Dashboard</h3>
+    <p>Doctors receive instant access to detailed analysis results, providing critical insights for patient care.</p>
+  </div>
+  <div class="feature-item">
+    <img src="../../../assets/img/img3.jpg" alt="Patient Notification">
+    <h3>Patient Notification</h3>
+    <p>Patients are notified as soon as their analysis is complete, prompting them to consult their doctor for further action.</p>
+  </div>
+</div>
+
+<div class="cancer-prediction-section">
+  <div class="prediction-header">
+    <h2>THE FUTURE OF CANCER PREDICTION</h2>
+    <p>Harness the power of microbiom science and AI to revolutionize cancer detection. With MICROSCAN, early detection is just a few clicks away.</p>
+  </div>
+
+  <div class="why-choose-us-section">
+    <h3>WHY CHOOSE US?</h3>
+    <div class="reasons-container">
+      <div class="reason-item">
+        <strong>Accuracy:</strong>
+        <p>Cutting-edge AI for precise cancer predictions.</p>
+      </div>
+      <div class="reason-item">
+        <strong>Efficiency:</strong>
+        <p>Streamlined process from laboratory upload to patient notification.</p>
+      </div>
+      <div class="reason-item">
+        <strong>Security:</strong>
+        <p>Robust data protection and privacy measures.</p>
+      </div>
+    </div>
+    <div class="illustration-container">
+      <img src="../../../assets/img/img5.jpg" alt="Illustration">
+    </div>
+  </div>
+</div>
+
 <app-footer></app-footer>
