--- a/src/app/layouts/doctor/doctor.component.html
+++ b/src/app/layouts/doctor/doctor.component.html
@@ -10,7 +10,7 @@
       <div class="welcome-container">
         <div class="welcome-text">Welcome Doctor Mike!</div>
         <div class="doctor-photo">
-          <img src="../../../assets/img/doctor.jpg" alt="Doctor Photo">
+          <img src="../../../assets/img/doctor.jpg" alt="Doctor">
         </div>
       </div>
 
@@ -63,7 +63,7 @@
         <div class="next-patient-details">
           <h3>Next Patient Details</h3>
           <div class="patient-card">
-            <img src="assets/img/doctor.jpg" alt="Patient Photo">
+            <img src="assets/img/doctor.jpg" alt="Patient">
             <div class="patient-info">
               <p><strong>Sanath Deo</strong><br>Health Checkup</p>
               <p>D.O.B: 15 January 1989</p>
