--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,9 +12,9 @@
   </div>
   <ul class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-10">
       <li><a class="text-md text-[#445bb3] font-bold" href="#">Home</a></li>
-      <li><a class="text-md text-gray-400 hover:text-gray-500" href="#">About Us</a></li>
-      <li><a class="text-md text-gray-400 hover:text-gray-500" href="#">Services</a></li>
-      <li><a class="text-md text-gray-400 hover:text-gray-500" [routerLink]="" fragment="contact">Contact</a></li>
+      <li><a class="text-md text-gray-400 hover:text-gray-500" href="#Services">Services</a></li>
+      <li><a class="text-md text-gray-400 hover:text-gray-500" href="#AboutUs">About Us</a></li>
+      <li><a class="text-md text-gray-400 hover:text-gray-500" href="#Contact" fragment="contact">Contact</a></li>
   </ul>
   <a class="hidden lg:inline-block py-2 px-6 bg-[#445bb3] hover:bg-[#364494] text-md text-white font-bold rounded-xl transition duration-200" href="login">Account</a>
 </nav>
