--- a/src/app/layouts/researcher/researcher.component.html
+++ b/src/app/layouts/researcher/researcher.component.html
@@ -1,4 +1,3 @@
-
     <script>
       const data = {
         labels: ['Normal', 'Cancer'],
@@ -38,8 +37,8 @@
       new Chart(ctx, config);
     </script>
 <div class="min-h-screen bg-gray-50/50">
-  <app-sidebar></app-sidebar>
-    <div class="p-4 xl:ml-80">    
+  <app-sidebar class="w-1/4 bg-white p-4" [url]="pat"></app-sidebar>
+  <div class="p-4 xl:ml-80">    
       <div class="mt-12">
         <div class="mb-12 grid gap-y-10 gap-x-6 md:grid-cols-2 xl:grid-cols-4">
           <div class="col-span-full relative flex flex-col bg-clip-border rounded-xl bg-white text-gray-700 shadow-md">
