--- a/src/app/views/homepage/homepage.component.html
+++ b/src/app/views/homepage/homepage.component.html
@@ -16,7 +16,7 @@
   </div>
 </section>
 
-<div class="features">
+<div class="features" id="Services">
   <div class="feature-item">
     <img src="../../../assets/img/img1.jpg" alt="Laboratory upload">
     <h3>Laboratory upload</h3>
@@ -45,7 +45,7 @@
     <p>Harness the power of microbiom science and AI to revolutionize cancer detection. With MICROSCAN, early detection is just a few clicks away.</p>
   </div>
 
-  <div class="why-choose-us-section">
+  <div class="why-choose-us-section" id="AboutUs">
     <h3>WHY CHOOSE US?</h3>
     <div class="reasons-container">
       <div class="reason-item">
@@ -67,4 +67,4 @@
   </div>
 </div>
 
-<app-footer></app-footer>
+<app-footer id="Contact"></app-footer>
