--- a/src/app/layouts/patient/patient.component.html
+++ b/src/app/layouts/patient/patient.component.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,7 +45,7 @@
 
   <div class="h-full flex">
     <!-- Sidebar Component -->
-    <app-sidebar class="w-1/4 bg-white p-4"></app-sidebar>
+    <app-sidebar class="w-1/4 bg-white p-4" [url]="pat"></app-sidebar>
 
     <div class="flex-1 p-4">
       <header class="text-center p-4 bg-white">
@@ -63,7 +64,7 @@
             <div class="rounded-full bg-gray-300 w-32 h-32 flex items-center justify-center mx-auto mb-4">
               <h2 class="text-6xl">👤</h2>
             </div>
-            <h3 class="text-xl font-bold">John Smith</h3>
+            <h3 class="text-xl font-bold">John D</h3>
             <p class="text-gray-400">New York, USA</p>
             <div class="flex justify-center mt-4">
               <div class="mr-4">
@@ -197,6 +198,7 @@
       </section>
     </div>
   </div>
+  <app-chat></app-chat>
 
 </body>
 </html>
