--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -16,5 +16,5 @@
       <li><a class="text-md text-gray-400 hover:text-gray-500" href="#AboutUs">About Us</a></li>
       <li><a class="text-md text-gray-400 hover:text-gray-500" href="#Contact" fragment="contact">Contact</a></li>
   </ul>
-  <a class="hidden lg:inline-block py-2 px-6 bg-[#445bb3] hover:bg-[#364494] text-md text-white font-bold rounded-xl transition duration-200" href="login">Account</a>
+  <a class="hidden lg:inline-block py-2 px-6 bg-[#445bb3] hover:bg-[#364494] text-md text-white font-bold rounded-xl transition duration-200" [routerLink]="['login']">Account</a>
 </nav>
