--- a/src/app/layouts/patient/patient.component.css
+++ b/src/app/layouts/patient/patient.component.css
@@ -1,45 +1,110 @@
-/* patient.component.css */
 body {
-    font-family: Arial, sans-serif;
+  font-family: 'DM Sans', sans-serif;
+}
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+header {
+  text-align: left;
+}
+.analysis {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0;
+}
+.status {
+  flex: 1;
+  text-align: center;
+}
+.patient-info {
+  flex: 1;
+  text-align: center;
+}
+.timeline {
+  margin: 20px 0;
+}
+.timeline ul {
+  list-style: none;
+  padding: 0;
+}
+.timeline ul li {
+  margin: 5px 0;
+}
+  .stat-number {
+    font-size: 2rem; /* Taille du chiffre clé */
+    line-height: 1;  /* Alignement vertical */
   }
-  
-  .container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  header {
-    text-align: left;
-  }
-  
-  .analysis {
+  .health-item {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    margin: 20px 0;
+    justify-content: space-between;
+    height: 100%; /* Prendre toute la hauteur de la case */
   }
-  
-  .status {
-    flex: 1;
-    text-align: center;
+  .health-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
-  
-  .patient-info {
-    flex: 1;
-    text-align: center;
+  .health-item-right {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding-left: 1rem;
   }
-  
-  .timeline {
-    margin: 20px 0;
+  .health-item-icon {
+    width: 48px;
+    height: 48px;
+    margin-right: 16px;
   }
-  
-  .timeline ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .timeline ul li {
-    margin: 5px 0;
-  }
-  
+/* Modal Overlay */
+.modal-overlay {
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.6);
+display: flex;
+justify-content: center;
+align-items: center;
+z-index: 999;
+}
+/* Modal Content */
+.modal-content {
+background-color: #fff;
+padding: 20px;
+border-radius: 8px;
+width: 90%;
+max-width: 500px;
+box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+text-align: center;
+}
+/* Modal Title */
+.modal-content h3 {
+font-size: 24px;
+font-weight: bold;
+margin-bottom: 15px;
+color: #333;
+}
+/* Modal Text */
+.modal-content p {
+font-size: 16px;
+color: #555;
+margin-bottom: 20px;
+}
+/* See More Button */
+.see-more-btn {
+display: inline-block;
+background-color: #007BFF;
+color: #fff;
+padding: 10px 20px;
+border-radius: 5px;
+text-decoration: none;
+transition: background-color 0.3s ease;
+}
+.see-more-btn:hover {
+background-color: #0056B3;
+}
