--- a/src/app/layouts/patient/patient.component.html
+++ b/src/app/layouts/patient/patient.component.html
@@ -1,85 +1,25 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MicroScan</title>
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'DM Sans', sans-serif;
-    }
-    .stat-number {
-      font-size: 2rem; /* Taille du chiffre clé */
-      line-height: 1;  /* Alignement vertical */
-    }
-    .health-item {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      height: 100%; /* Prendre toute la hauteur de la case */
-    }
-    .health-content {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-    }
-    .health-item-right {
-      display: flex;
-      align-items: center;
-      height: 100%; 
-      padding-left: 1rem; 
-    }
-
-    .health-item-icon {
-      width: 48px;
-      height: 48px;
-      margin-right: 16px;
-    }
-  </style>
-</head>
-
 <body class="bg-white h-screen">
-
   <div class="h-full flex">
     <!-- Sidebar Component -->
     <app-sidebar class="w-1/4 bg-white p-4" [url]="pat"></app-sidebar>
-
     <div class="flex-1 p-4">
       <header class="text-center p-4 bg-white">
         <h1 class="text-3xl">Welcome on MicroScan, John!</h1>
       </header>
-      
       <section class="bg-white p-8 flex flex-col h-full">
         <div class="flex items-center justify-between mb-8">
           <div class="text-center flex-1">
             <h2 class="text-4xl font-bold mb-2">Analysis is ready</h2>
-            <p class="text-gray-600 mb-4">Please contact your doctor to get a full diagnostic</p>
-            <button class="bg-blue-500 text-white py-2 px-4 rounded">Contact</button>
+            <p class="text-gray-600 mb-4">Please click on View Result to see the full result</p>
+            <button *ngIf="showViewResultButton" (click)="viewResult()" class="bg-blue-500 text-white py-2 px-4 rounded">View Result</button>
           </div>
-          <img src="../../../assets/Images/DNA1.png" alt="DNA1 image" class="w-48 mx-auto mb-4">
-          <div class="text-center flex-1">
-            <div class="rounded-full bg-gray-300 w-32 h-32 flex items-center justify-center mx-auto mb-4">
-              <h2 class="text-6xl">👤</h2>
-            </div>
-            <h3 class="text-xl font-bold">John D</h3>
-            <p class="text-gray-400">New York, USA</p>
-            <div class="flex justify-center mt-4">
-              <div class="mr-4">
-                <p class="text-gray-600">Height</p>
-                <p class="font-bold">186cm</p>
-              </div>
-              <div class="mr-4">
-                <p class="text-gray-600">Age</p>
-                <p class="font-bold">32</p>
-              </div>
-              <div>
-                <p class="text-gray-600">Weight</p>
-                <p class="font-bold">86kg</p>
-              </div>
-            </div>
+        </div>
+        <!-- Modal -->
+        <div *ngIf="showModal" class="modal-overlay">
+          <div class="modal-content">
+            <h3>Result of the Analysis</h3>
+            <p>{{ this.prediction_result }}</p>
+            <button class="see-more-btn" (click)="closeModal()">See More</button>
           </div>
         </div>
         <hr>
@@ -88,15 +28,15 @@
             <h2 class="text-xl font-bold mb-4">29 July</h2>
             <ul class="space-y-2">
               <li class="flex items-center">
-                <span class="bg-blue-500 text-white rounded-full h-6 w-6 flex items-center justify-center mr-4">✔</span>
+                <span class="bg-blue-500 text-white rounded-full h-6 w-6 flex items-center justify-center mr-4">:coche_trait_plein:</span>
                 Analysis results received: Yesterday
               </li>
               <li class="flex items-center">
-                <span class="bg-blue-500 text-white rounded-full h-6 w-6 flex items-center justify-center mr-4">✔</span>
+                <span class="bg-blue-500 text-white rounded-full h-6 w-6 flex items-center justify-center mr-4">:coche_trait_plein:</span>
                 Analysis launched: 22 July
               </li>
               <li class="flex items-center">
-                <span class="bg-blue-500 text-white rounded-full h-6 w-6 flex items-center justify-center mr-4">✔</span>
+                <span class="bg-blue-500 text-white rounded-full h-6 w-6 flex items-center justify-center mr-4">:coche_trait_plein:</span>
                 Laboratory meeting: 20 July
               </li>
             </ul>
@@ -199,6 +139,4 @@
     </div>
   </div>
   <app-chat></app-chat>
-
 </body>
-</html>
